[metadata]
name = ngobot-json
version = 1.1.10
author = Nseobong Gregory Obot
author_email = support@invicast.com
description = A Python JSON Format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ngobot/ngobot_json
project_urls =
    Bug Tracker = https://github.com/ngobot/ngobot_json/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src